test/expected/simple-next-tick.txt
/scripts/simple-next-tick.js:9
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-next-tick.js:9:9)
    at _combinedTickCallback (node.js:370:9)
    at process._tickCallback (node.js:401:11)
    at Function.Module.runMain (module.js:449:11)
    at startup (node.js:141:18)
    at node.js:933:3
    at Object.<anonymous> (/scripts/simple-next-tick.js:8:9)
    at Module._compile (module.js:413:34)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Function.Module.runMain (module.js:447:10)
    at startup (node.js:141:18)
    at node.js:933:3
